--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "crypto": "^1.0.1",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
     "next": "13.4.1",
@@ -21,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-to-print": "^2.15.1",
     "slugify": "^1.6.6",
     "tailwindcss": "3.3.2"
   },
